--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
         "ecmaVersion": 2018
     },
     "rules": {
-        "import/extensions": 0
+        "import/extensions": 0,
+        "no-tabs": 0,
+        "indent": 0
     }
 }
