--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
         "import/extensions": 0,
         "no-tabs": 0,
         "indent": 0,
-        "function-paren-newline": 0
+        "function-paren-newline": 0,
+        "comma-dangle": 0,
+        "implicit-arrow-linebreak": 0
     }
 }
