fixing linter error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
         "indent": 0,
         "function-paren-newline": 0,
         "comma-dangle": 0,
-        "implicit-arrow-linebreak": 0
+        "implicit-arrow-linebreak": 0,
+        "import/no-unresolved": 0,
+        "arrow-parens": 0
     }
 }
